Fix contrast on username for highlight

--- a/src/styles/Highlight.module.css
+++ b/src/styles/Highlight.module.css
@@ -72,3 +72,7 @@ h5 {
   border-radius: 1rem;
   padding: 0.2rem 0.9rem;
 }
+
+.User {
+  color: #453a2c;
+}
